--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <rect key="frame" x="16" y="72" width="339" height="86"/>
                                 </variation>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmu-ZF-Q6X">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="187" width="251" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="GqW-j1-SXI"/>
                                 <exclude reference="Aec-Zj-sNx"/>
                                 <exclude reference="6Zt-TJ-dMQ"/>
+                                <exclude reference="dmu-ZF-Q6X"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="GqW-j1-SXI"/>
                                 <include reference="Aec-Zj-sNx"/>
                                 <include reference="6Zt-TJ-dMQ"/>
+                                <include reference="dmu-ZF-Q6X"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="HZz-cS-i0Z" id="xQn-FM-6Cc"/>
                         <outlet property="mailButton" destination="Aec-Zj-sNx" id="dcz-eh-sY6"/>
                         <outlet property="messageLabel" destination="6Zt-TJ-dMQ" id="0V1-9S-c6D"/>
+                        <outlet property="nameLabel" destination="dmu-ZF-Q6X" id="Pvm-iS-JI6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
